--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - mix compile --warnings-as-errors
   - mix dialyzer.plt
 script:
-  - mix coveralls.travis
+  - elixir --sname a -S mix coveralls.travis
   - mix dialyzer --halt-exit-status
   - mix credo --strict
 cache:
