Add some more badges to README.md, InchCI and InchCI-related docs improvements

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ script:
   - elixir --sname a -S mix coveralls.travis
   - mix dialyzer --halt-exit-status
   - mix credo --strict
+after_script:
+  - mix deps.get --only docs
+  - MIX_ENV=docs mix inch.report
 cache:
   directories:
     - .dialyxir
