--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - epmd -daemon
 before_script:
   - mix compile --warnings-as-errors
-  - mix dialyzer.plt
+  - mix dialyzer
 script:
   - elixir --sname a -S mix coveralls.travis
   - mix dialyzer --halt-exit-status
